I have started the design of the index with the logos of the platforms (still to finish)

--- a/rating-games/src/index.css
+++ b/rating-games/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://eskipaper.com/images/simple-purple-wallpaper-1.jpg");
 }
 
 code {
