--- a/rating-games/src/views/Index/Index.css
+++ b/rating-games/src/views/Index/Index.css
@@ -1,6 +1,15 @@
-.playlogo {
-    width: 120px;
+body {
+    -ms-overflow-style: none;
+    overflow-y: scroll;
+  }
 
+  body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+  }
+
+.playlogo {
+    width: 130px;
+    
     transition: all 1s ease;
 }
 
@@ -17,7 +26,7 @@
 }
 
 .pclogo{
-    width: 175px;
+    width: 105px;
 
     transition: all 1s ease;
 }
@@ -25,7 +34,7 @@
 .animation {
     margin: auto;
     width: 500px;
-    height: 50vh;
+    height: 45vh;
     padding: 15px;
     
     display: flex;
