--- a/rating-games/src/views/Login/Login.css
+++ b/rating-games/src/views/Login/Login.css
@@ -1,7 +1,7 @@
 .container{
   position: center;
-  margin-top: 10rem;
-  max-width: 700px;
+  /* margin-top: 10rem;
+  max-width: 700px; */
   width: 100%;
   background-color: rgba(29, 29, 29, 0.5);
   padding: 25px 30px;
