--- a/rating-games/src/views/Login/Login.css
+++ b/rating-games/src/views/Login/Login.css
@@ -1,19 +1,20 @@
-.container{
+.containerlogin{
   position: center;
-  /* margin-top: 10rem;
-  max-width: 700px; */
+  margin-top: 12rem;
+  max-width: 700px;
   width: 100%;
   background-color: rgba(29, 29, 29, 0.5);
+  margin-left: 40rem;
   padding: 25px 30px;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.8);
 }
-.container .title{
+.containerlogin .title{
   font-size: 25px;
   font-weight: 500;
   position: relative;
 }
-.container .title::before{
+.containerlogin .title::before{
   content: "";
   position: absolute;
   left: 0;
@@ -108,7 +109,7 @@ form .input-box span.details{
   background: linear-gradient(135deg, #000000, #a658c5);
   }
  @media(max-width: 584px){
- .container{
+ .containerlogin {
   max-width: 100%;
 }
 form .user-details .input-box{
@@ -127,7 +128,7 @@ form .user-details .input-box{
   }
   }
   @media(max-width: 459px){
-  .container .content .category{
+  .containerlogin .content .category{
     flex-direction: column;
   }
 }
