--- a/rating-games/src/views/Game/Game.css
+++ b/rating-games/src/views/Game/Game.css
@@ -5,7 +5,6 @@
   margin-top: 2.1%;
   margin-left: 5%;
   margin-right: 5%;
-  opacity: 0.8;
-  border-radius: 20px;
+  border-radius: 2%;
   padding: 50px;
 }
