Completely finished the Profile view, it remains to add the functionality of being able to update the data.

--- a/rating-games/src/components/Navbar/Navbar.css
+++ b/rating-games/src/components/Navbar/Navbar.css
@@ -14,3 +14,11 @@
 .navlink:hover {
  text-decoration: underline;
 }
+
+.profilenavbar {
+    border-radius:100%;
+    margin-top:3rem;
+    margin: auto;
+    width:4rem;
+    height:4rem;
+  }
