--- a/rating-games/src/views/Register/Register.css
+++ b/rating-games/src/views/Register/Register.css
@@ -1,19 +1,21 @@
 .containerregister {
   position: center;
-  margin-top: 8rem;
-  max-width: 700px;
+  margin-top: 10rem;
+  max-width: 55rem;
   width: 100%;
   background-color: rgba(29, 29, 29, 0.5);
-  margin-left: 25rem;
-  padding: 25px 30px;
-  border-radius: 5px;
+  margin-left: 33rem;
+  padding: 2% 2%;
+  border-radius: 3%;
   box-shadow: 0 5px 10px rgba(0,0,0,0.8);
 }
+
 .containerregister .title{
   font-size: 25px;
   font-weight: 500;
   position: relative;
 }
+
 .containerregister .title::before{
   content: "";
   position: absolute;
@@ -22,23 +24,27 @@
   height: 3px;
   width: 30px;
   border-radius: 5px;
-  background: linear-gradient(135deg, #000000, #a658c5);
+  background: #8C52FF;
 }
+
 .content form .user-details{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 20px 0 12px 0;
 }
+
 form .user-details .input-box{
   margin-bottom: 15px;
   width: calc(100% / 2 - 20px);
 }
+
 form .input-box span.details{
   display: block;
   font-weight: 500;
   margin-bottom: 5px;
 }
+
 .user-details .input-box input{
   height: 45px;
   width: 100%;
@@ -50,25 +56,30 @@ form .input-box span.details{
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
+
 .user-details .input-box input:focus,
 .user-details .input-box input:valid{
   border-color: #9b59b6;
 }
+
  form .gender-details .gender-title{
   font-size: 20px;
   font-weight: 500;
  }
+
  form .category{
    display: flex;
    width: 80%;
    margin: 14px 0 ;
    justify-content: space-between;
  }
+
  form .category label{
    display: flex;
    align-items: center;
    cursor: pointer;
  }
+
  form .category label .dot{
   height: 18px;
   width: 18px;
@@ -78,56 +89,66 @@ form .input-box span.details{
   border: 5px solid transparent;
   transition: all 0.3s ease;
 }
+
  #dot-1:checked ~ .category label .one,
  #dot-2:checked ~ .category label .two,
  #dot-3:checked ~ .category label .three{
-   background: #9b59b6;
-   border-color: #d9d9d9;
+  background: #8C52FF;
+  border-color: #d9d9d9;
  }
+
  form input[type="radio"]{
    display: none;
  }
+ 
  form .button{
    height: 45px;
    margin: 35px 0
  }
+
  form .button input{
+   
    height: 100%;
    width: 100%;
    border-radius: 5px;
    border: none;
-   color: #fff;
+   color: rgb(255, 255, 255);
    font-size: 18px;
    font-weight: 500;
    letter-spacing: 1px;
    cursor: pointer;
    transition: all 0.3s ease;
-   background: linear-gradient(135deg, #000000, #a658c5);
-}
- form .button input:hover{
-  background: linear-gradient(135deg, #000000, #a658c5);
+   background: #8C52FF;
   }
+
  @media(max-width: 584px){
  .containerregister {
   max-width: 100%;
 }
+
 form .user-details .input-box{
     margin-bottom: 15px;
     width: 100%;
   }
+
   form .category{
     width: 100%;
   }
+
   .content form .user-details{
     max-height: 300px;
     overflow-y: scroll;
   }
+
   .user-details::-webkit-scrollbar{
     width: 5px;
   }
+
   }
+
   @media(max-width: 459px){
   .containerregister .content .category{
     flex-direction: column;
   }
+
 }
